<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <com.example.notes.jokeapp.presentation.FavoriteDataView
        android:id="@+id/jokeFavoriteDataView"
        android:layout_width="match_parent"
        app:checkBoxText="@string/show_favorite_joke"
        app:actionButtonText="@string/button_get_joke"
        android:layout_height="wrap_content" />

    <com.example.notes.jokeapp.presentation.FavoriteDataView
        android:id="@+id/quoteFavoriteDataView"
        android:layout_width="match_parent"
        app:checkBoxText="@string/show_favorite_quote"
        app:actionButtonText="@string/button_get_quote"
        android:layout_height="wrap_content" />

</LinearLayout>